[package]
name = "orion_conf"
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2024"
version = "0.1.2"

[dependencies]
# thiserror = "~2.0"
orion-error = "~0.5"
#orion-error = { path = "../orion-error" }
#orion-error = { git = "https://github.com/galaxy-sec/orion-error.git", tag = "v0.5.1" }
derive_more = { version = "2.0", features = ["full"] }
derive-getters = "~0.5"
toml = "~0.9"
serde = "~1.0"
serde_yaml = "~0.9"
serde_ini = "~0.2.0"
serde_json = "~1.0"
thiserror = "~2.0"
serde_derive = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
